--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </script>
 <head>
     <title>Xiang Yue</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
@@ -44,7 +44,7 @@
                 <div class="sixteen wide mobile four wide tablet four wide computer column center aligned ">
                     <br>
                     <div class="ui small circular image" id="profile">
-                        <img src="images/yue.jpg">
+                        <img src="./images/yue.jpg">
                     </div>
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
