--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     })();
 </script>
 <head>
-    <title>Xiang Yue</title>
+    <meta charset="utf-8">
+    <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
@@ -35,7 +36,7 @@
 
 <!-- home -->
 <div class="ui main text container">
-    <div class="ui huge header">Xiang <span>(Tommy)</span> Yue</div>
+    <div class="ui huge header">Xiang <span>(Tommy)</span> Yue (岳 翔)</div>
     <div class="ui section divider"></div>
     <div class="ui top attached">
 
