--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     in <a href="http://bioinfotech.cn/en/">Biomedical Big Data Mining Lab (BBDM-Lab) </a>and Prof. Feng Liu.
                     My research interests lie in Machine Learning, especially in semi-supervised learning, Data Mining,
                     especially in graph mining and their applications in biology (Bioinformatics) and social network.</p>
+                <p>I will work with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> at OSU as a Phd student this coming fall!</p> 
             </div>
             <!-- News -->
             <br>
