--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
                 <!--</p>-->
 
                 <p>I'm currently a senior undergraduate student in <a href="http://en.whu.edu.cn/"> Wuhan University</a>, China.
-                    I'm fortunetly supervised by <a href="http://bioinfotech.cn/en/">Prof. Wen Zhang.</a>
+                    I'm fortunately supervised by <a href="http://bioinfotech.cn/en/">Prof. Wen Zhang.</a>
                     in <a href="http://bioinfotech.cn/en/">Biomedical Big Data Mining Lab (BBDM-Lab) </a>and Prof. Feng Liu.
                     My research interests lie in Machine Learning, especially in semi-supervised learning, Data Mining,
                     especially in graph mining and their applications in biology (Bioinformatics) and social network.</p>
@@ -106,17 +106,17 @@ var _hmt = _hmt || [];
                 <h3>What's New</h3>
                 <ul>
                     <!--<li>August.1 - Preparing to join <a href="https://cse.osu.edu/" target="_blank">OSU</a> to start my PhD student life!</li>-->
-                    <li>May.31 - 1 papar of <i><b>Methods</b></i> is accpeted</li>
+                    <li>May.31 - 1 papar of <i><b>Methods</b></i> is accepted</li>
                     <li>May.30 - Win Outstanding Graduates of WHU (10%)</li>
-                    <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accpeted</li>
+                    <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accepted</li>
                     <li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and
                         give reports in Kansas City, MO, USA
                     </li>
                     <li>Oct.10 - Win LEI JUN Scholarship (Top 1 Winners of National Scholarship, the HIGHEST prize in
                         WHU)
                     </li>
-                    <li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> are accpeted</li>
-                    <li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> is accpeted</li>
+                    <li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> are accepted</li>
+                    <li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> is accepted</li>
                 </ul>
 
             </div>
