--- a/publication.html
+++ b/publication.html
@@ -34,9 +34,9 @@
 				<div class="content">
 					<h3 class="title">Conference Paper</h3>
 					<ul>
-						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li,* (Regualar Paper, Accepted, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
+						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, Accepted, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
 							<a href="./slide/B293_BIBM2017.pdf"> [Slides]</a></li>
-						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li* (Short Paper, Accepted)
+						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper, Accepted)
 							<a href="./pdf/B315_BIBM2017.pdf"> [Paper]</a>
 							<a href="./slide/B315_BIBM2017.pdf"> [Slides]</a></li>
 					</ul>
