--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ var _hmt = _hmt || [];
                 <h3>What's New</h3>
                 <ul>
                     <!--<li>August.1 - Preparing to join <a href="https://cse.osu.edu/" target="_blank">OSU</a> to start my PhD student life!</li>-->
+                    <li>Jun.13 - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
                     <li>May.31 - 1 papar of <i><b>Methods</b></i> is accepted</li>
                     <li>May.30 - Win Outstanding Graduates of WHU (10%)</li>
                     <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accepted</li>
