--- a/talk.html
+++ b/talk.html
@@ -32,6 +32,11 @@
             <div class="content">
                 <ul>
                     <li>
+                        Predicting drug-disease associations based on machine learning methods
+                        <p>Online Talk, June 13, Wuhan, China [<a href="./slide/pre_drug_dis_ml.pdf">Slides</a>] </p>
+                    </li>
+                    
+                    <li>
                         Predicting drug-disease associations based on the known association bipartite network
                         <p>Talk at <a href="https://muii.missouri.edu/bibm2017/" target="_blank ">IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017)</a>, Kansas City, MO, U.S., Nov. 2017. [<a href="./pdf/B293_BIBM2017.pdf">Paper</a>] [<a href="./slide/B293_BIBM2017.pdf">Slides</a>] </p>
                     </li>
