--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@
 
 					<h3 class="title">Journal Paper</h3>
 					<ul>
-                        <li>Matrix Factorization with Similarity Constrained for predicting Drug-Disease Associations, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu (to appear)</li>
+                        <li>Predicting drug-disease associations by using similarity constrained matrix factorization, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu <a href="./pdf/2018 bmc bioinfo.pdf"> [Paper]</a></li>
 
                         <li>Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network, <i><b>Methods</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan (to appear)</li>
 
