--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 <head>
+	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <meta charset="utf-8">
     <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
@@ -56,7 +57,7 @@ var _hmt = _hmt || [];
                                 <!--href="http://web.cse.ohio-state.edu/~sun.397/students.html" target="_blank">Honored to-->
                             <!--stay with a group of lovely people!</a></p>-->
                         <p>Senior Undergraduate, Wuhan University, China</p>
-                        <p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu </p>
+                        <p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu DOT cn </p>
                         <p><i class="home icon"></i>Lab: <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data Mining Lab (BBDM-Lab) </a></p>
                         <!--<p>-->
                             <!--<i class="google icon"></i><a href="https://scholar.google.com/citations?user=4jX_dI8AAAAJ&hl=en" target="_blank">Google Scholar</a>-->
