--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ var _hmt = _hmt || [];
 
 
 <!-- header -->
-<div class="ui fixed stackable top menu borderless" id="menu">
+<div class="ui fixed fitted top menu borderless" id="menu">
     <div class="ui container">
         <div class="right menu">
             <a class="item" href="/"><i class="home icon"></i>Home</a>
