--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ var _hmt = _hmt || [];
 })();
 </script>
 <head>
-	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes">
     <meta charset="utf-8">
     <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
@@ -21,9 +21,9 @@ var _hmt = _hmt || [];
 
 
 <!-- header -->
-<div class="ui fixed fitted top menu borderless" id="menu">
+<div class="ui fixed fitted top menu borderless">
     <div class="ui container">
-        <div class="right menu">
+        <div class="right menu" id="my-menu">
             <a class="item" href="/"><i class="home icon"></i>Home</a>
             <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
             <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
