--- a/talk.html
+++ b/talk.html
@@ -12,9 +12,9 @@
 
 
 <!-- header -->
-    <div class="ui fixed stackable top menu borderless" id="menu">
+    <div class="ui fixed fitted top menu borderless">
         <div class="ui container">
-            <div class="right menu">
+            <div class="right menu" id="my-menu">
                 <a class="item" href="/"><i class="home icon"></i>Home</a>
                 <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
                 <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
@@ -22,6 +22,7 @@
                 <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
             </div>
         </div>
+
     </div>
 
 
@@ -55,7 +56,7 @@
 
 
 
-
+    </div>
 
 <script type="text/javascript" src="js/index.js"></script>
 
