--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@ var _hmt = _hmt || [];
                 <h3>What's New</h3>
                 <ul>
                     <!--<li>August.1 - Preparing to join <a href="https://cse.osu.edu/" target="_blank">OSU</a> to start my PhD student life!</li>-->
+                    <li>June.28 - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
                     <li>Jun.13 - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
-                    <li>May.31 - 1 papar of <i><b>Methods</b></i> is accepted</li>
-                    <li>May.30 - Win Outstanding Graduates of WHU (10%)</li>
+                    <li>May.31 - 1 papar of <i><b>Methods</b></i> has been accepted</li>
+                    <li>May.30 - Win Outstanding Graduates of WHU (top 10%)</li>
                     <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accepted</li>
                     <li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and
                         give reports in Kansas City, MO, USA
@@ -117,8 +118,8 @@ var _hmt = _hmt || [];
                     <li>Oct.10 - Win LEI JUN Scholarship (Top 1 Winners of National Scholarship, the HIGHEST prize in
                         WHU)
                     </li>
-                    <li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> are accepted</li>
-                    <li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> is accepted</li>
+                    <li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> have been accepted</li>
+                    <li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> has been accepted</li>
                 </ul>
 
             </div>
