--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@ var _hmt = _hmt || [];
 
 
 <!-- header -->
-<div class="ui fixed fitted top menu borderless">
+<div class="ui fixed fitted top five item menu borderless">
     <div class="ui container">
-        <div class="right menu" id="my-menu">
-            <a class="item" href="/"><i class="home icon"></i>Home</a>
-            <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-            <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
-            <a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
-            <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
-        </div>
+
+        <a class="item" href="/"><i class="home icon"></i>Home</a>
+        <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
+        <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
+        <a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
+        <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
+
     </div>
 
 </div>
