--- a/misc.html
+++ b/misc.html
@@ -34,6 +34,7 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
+                    <li><b>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</b></li>
                     <li><b>May 2018, Outstanding Graduates of WHU (Scale: 10%)</b></li>
                     <li><b>2016-2017, LEI JUN Scholarship (Scale: Top1 Winner of National Scholarship, the highest prize for
                         students in WHU)</b></li>
