--- a/publication.html
+++ b/publication.html
@@ -12,20 +12,20 @@
 
 
 			<!-- header -->
+
+
 			<div class="ui fixed fitted top five item menu borderless">
 				<div class="ui container">
 
-						<a class="item" href="/"><i class="home icon"></i>Home</a>
-						<a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-						<a class="item" href="talk"><i class="bell icon"></i>Talk</a>
-						<a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
-						<a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
+					<a class="item" href="/"><i class="home icon"></i>Home</a>
+					<a class="item" href="publication"><i class="file text icon"></i>Publication</a>
+					<a class="item" href="talk"><i class="bell icon"></i>Talk</a>
+					<a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
+					<a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
 				</div>
 
 			</div>
-
-		
 
 		<!-- home -->
 		<div class="ui main text container">
@@ -37,10 +37,10 @@
 					<h3 class="title">Conference Paper</h3>
 					<ul>
 						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, Accepted, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
-							<a href="./slide/B293_BIBM2017.pdf"> [Slides]</a></li>
+							<a href="./slide/B293_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
 						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper, Accepted)
-							<a href="./pdf/B315_BIBM2017.pdf"> [Paper]</a>
-							<a href="./slide/B315_BIBM2017.pdf"> [Slides]</a></li>
+							<a href="./pdf/B315_BIBM2017.pdf" target="_blank"> [Paper]</a>
+							<a href="./slide/B315_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
 					</ul>
 
 
@@ -48,12 +48,12 @@
 
 					<h3 class="title">Journal Paper</h3>
 					<ul>
-                        <li>Predicting drug-disease associations by using similarity constrained matrix factorization, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu <a href="./pdf/2018 bmc bioinfo.pdf"> [Paper]</a></li>
+                        <li>Predicting drug-disease associations by using similarity constrained matrix factorization, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu <a href="./pdf/2018 bmc bioinfo.pdf" target="_blank"> [Paper]</a></li>
 
-                        <li>Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network, <i><b>Methods</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan (to appear)</li>
+                        <li>Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network, <i><b>Methods</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan <a href="https://authors.elsevier.com/c/1XRuA3juFrYwED" target="_blank"> [Paper]</a></li>
 
                         <li>A unified frame of predicting side effects of drugs by using linear neighborhood similarity, <i><b>BMC Systems Biology</b></i>, Dec. 2017, Wen Zhang, <b>Xiang Yue</b>, Feng Liu, Yanlin Chen, Shikui Tu, Qianlong Qu, Xining Zhang
-							<a href="./pdf/2017 system biology.pdf"> [Paper]</a></li>
+							<a href="./pdf/2017 system biology.pdf" target="_blank"> [Paper]</a></li>
 
 					</ul>
 
