--- a/publication.html
+++ b/publication.html
@@ -59,14 +59,14 @@
 
 					<hr>
 
-					<h3 class="title">Under Review</h3>
-					<ul>
-						<li>SSFLM-LPI: Sequence-based feature projection ensemble learning for predicting lncRNA-protein interactions</li>
-                        <li>Privacy-preserving Disease Diagnosis over Encrypted Genome Data using Trusted Processors</li>
-                        <li>Manifold regularized matrix factorization for drug-drug interaction prediction</li>
-                        <li>An ensemble multi-relations learning for wise and precise traditional chinese medicine</li>
-                        <li>Sequence-based bacterial small RNAs prediction by using ensemble learning strategies</li>
-                    </ul>
+					<!--<h3 class="title">Under Review</h3>-->
+					<!--<ul>-->
+						<!--<li>SSFLM-LPI: Sequence-based feature projection ensemble learning for predicting lncRNA-protein interactions</li>-->
+                        <!--<li>Privacy-preserving Disease Diagnosis over Encrypted Genome Data using Trusted Processors</li>-->
+                        <!--<li>Manifold regularized matrix factorization for drug-drug interaction prediction</li>-->
+                        <!--<li>An ensemble multi-relations learning for wise and precise traditional chinese medicine</li>-->
+                        <!--<li>Sequence-based bacterial small RNAs prediction by using ensemble learning strategies</li>-->
+                    <!--</ul>-->
 
 
 
