--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
                     <div class="content" id="bio-short">
-                        <!--<p>PhD student, The Ohio State University, U.S.</p>-->
-                        <!--<p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>-->
-                        <!--<p><i class="home icon"></i>Group: <a-->
-                                <!--href="http://web.cse.ohio-state.edu/~sun.397/students.html" target="_blank">Honored to-->
-                            <!--stay with a group of lovely people!</a></p>-->
-                        <p>Senior Undergraduate, Wuhan University, China</p>
-                        <p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu DOT cn </p>
-                        <p><i class="home icon"></i>Lab: <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data Mining Lab (BBDM-Lab) </a></p>
+                        <p>PhD student, The Ohio State University, OH, U.S.</p>
+                        <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
+                        <p><i class="home icon"></i>Group: <a
+                                href="http://web.cse.ohio-state.edu/~sun.397/students.html" target="_blank">DM+AI Group@OSU</a></p>
+                        <!--<p>Senior Undergraduate, Wuhan University, China</p>-->
+                        <!--<p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu DOT cn </p>-->
+                        <!--<p><i class="home icon"></i>Lab: <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data Mining Lab (BBDM-Lab) </a></p>-->
                         <!--<p>-->
                             <!--<i class="google icon"></i><a href="https://scholar.google.com/citations?user=4jX_dI8AAAAJ&hl=en" target="_blank">Google Scholar</a>-->
                             <!--<i class="linkedin icon"></i><a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">Linkedin</a>-->
@@ -80,26 +79,26 @@ var _hmt = _hmt || [];
             <!-- Bio -->
             <div class="content">
                 <h3>Bio</h3>
-                <!--<p>-->
-                    <!--I'm currently a first-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department-->
-                    <!--of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working-->
-                    <!--with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> to explore-->
-                    <!--more in NLP, text mining and their applications.-->
-                <!--</p>-->
-                <!--<p>-->
-                    <!--Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School-->
-                    <!--of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a-->
-                        <!--href="http://bioinfotech.cn/en/" target="_blank">Prof. Wen Zhang</a> in Biomedical Big Data-->
-                    <!--Mining Lab (BBDM-Lab). We adopted many data mining technologies, i.e. recommender systems, graph and-->
-                    <!--network models to solve problems in medicine and biology.-->
-                <!--</p>-->
+                <p>
+                    I'm currently a first-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
+                    of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
+                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> to explore
+                    more in Data Mining.
+                </p>
+                <p>
+                    Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School
+                    of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a
+                        href="http://bioinfotech.cn/en/" target="_blank">Prof. Wen Zhang</a> in Biomedical Big Data
+                    Mining Lab (BBDM-Lab). We adopted many data mining technologies, i.e. recommender systems, graph and
+                    network models to solve problems in medicine and biology.
+                </p>
 
-                <p>I'm currently a senior undergraduate student in <a href="http://en.whu.edu.cn/"> Wuhan University</a>, China.
-                    I'm fortunately supervised by <a href="http://bioinfotech.cn/en/">Prof. Wen Zhang.</a>
-                    in <a href="http://bioinfotech.cn/en/">Biomedical Big Data Mining Lab (BBDM-Lab) </a>and Prof. Feng Liu.
-                    My research interests lie in Machine Learning, especially in semi-supervised learning, Data Mining,
-                    especially in graph mining and their applications in biology (Bioinformatics) and social network.</p>
-                <p>I will work with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> at OSU as a Phd student this coming fall!</p> 
+                <!--<p>I'm currently a senior undergraduate student in <a href="http://en.whu.edu.cn/"> Wuhan University</a>, China.-->
+                    <!--I'm fortunately supervised by <a href="http://bioinfotech.cn/en/">Prof. Wen Zhang.</a>-->
+                    <!--in <a href="http://bioinfotech.cn/en/">Biomedical Big Data Mining Lab (BBDM-Lab) </a>and Prof. Feng Liu.-->
+                    <!--My research interests lie in Machine Learning, especially in semi-supervised learning, Data Mining,-->
+                    <!--especially in graph mining and their applications in biology (Bioinformatics) and social network.</p>-->
+                <!--<p>I will work with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> at OSU as a Phd student this coming fall!</p> -->
             </div>
             <!-- News -->
             <br>
