--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
                         <!--<p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu DOT cn </p>-->
                         <!--<p><i class="home icon"></i>Lab: <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data Mining Lab (BBDM-Lab) </a></p>-->
                         <!--<p>-->
-                            <!--<i class="google icon"></i><a href="https://scholar.google.com/citations?user=4jX_dI8AAAAJ&hl=en" target="_blank">Google Scholar</a>-->
+                            <!--<i class="google icon"></i><a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">Google Scholar</a>-->
                             <!--<i class="linkedin icon"></i><a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">Linkedin</a>-->
                             <!--<i class="linkify icon"></i><a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">Researchgate</a>-->
                             <!--<i class="github icon"></i><a href="https://github.com/Tommy9607" target="_blank">Github</a>-->
@@ -93,32 +93,28 @@ var _hmt = _hmt || [];
                     network models to solve problems in medicine and biology.
                 </p>
 
-                <!--<p>I'm currently a senior undergraduate student in <a href="http://en.whu.edu.cn/"> Wuhan University</a>, China.-->
-                    <!--I'm fortunately supervised by <a href="http://bioinfotech.cn/en/">Prof. Wen Zhang.</a>-->
-                    <!--in <a href="http://bioinfotech.cn/en/">Biomedical Big Data Mining Lab (BBDM-Lab) </a>and Prof. Feng Liu.-->
-                    <!--My research interests lie in Machine Learning, especially in semi-supervised learning, Data Mining,-->
-                    <!--especially in graph mining and their applications in biology (Bioinformatics) and social network.</p>-->
-                <!--<p>I will work with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> at OSU as a Phd student this coming fall!</p> -->
+
             </div>
             <!-- News -->
             <br>
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
-                    <!--<li>August.1 - Preparing to join <a href="https://cse.osu.edu/" target="_blank">OSU</a> to start my PhD student life!</li>-->
+                    <li>Sept.1 - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
+                    <li>August.11 - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
                     <li>June.28 - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
                     <li>Jun.13 - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
                     <li>May.31 - 1 papar of <i><b>Methods</b></i> has been accepted</li>
                     <li>May.30 - Win Outstanding Graduates of WHU (top 10%)</li>
                     <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accepted</li>
-                    <li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and
-                        give reports in Kansas City, MO, USA
-                    </li>
-                    <li>Oct.10 - Win LEI JUN Scholarship (Top 1 Winners of National Scholarship, the HIGHEST prize in
-                        WHU)
-                    </li>
-                    <li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> have been accepted</li>
-                    <li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> has been accepted</li>
+                    <!--<li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and-->
+                        <!--give reports in Kansas City, MO, USA-->
+                    <!--</li>-->
+                    <!--<li>Oct.10 - Win LEI JUN Scholarship (Top 1 Winners of National Scholarship, the HIGHEST prize in-->
+                        <!--WHU)-->
+                    <!--</li>-->
+                    <!--<li>Oct.8 - 2 papers of <i><b>BIBM 2017</b></i> have been accepted</li>-->
+                    <!--<li>Sept.28 - 1 papar of <i><b>BMC Systems Biology</b></i> has been accepted</li>-->
                 </ul>
 
             </div>
