--- a/misc.html
+++ b/misc.html
@@ -34,15 +34,15 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
-                    <li><b>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</b></li>
-                    <li><b>May 2018, Outstanding Graduates of WHU (Scale: 10%)</b></li>
-                    <li><b>2016-2017, LEI JUN Scholarship (Scale: Top1 Winner of National Scholarship, the highest prize for
-                        students in WHU)</b></li>
-                    <li><b>2014-2017, First Class Scholarship (Scale: 5%), Three Times, WHU</b></li>
+                    <li>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</li>
+                    <li>May 2018, Outstanding Graduates of WHU (Scale: 10%)</li>
+                    <li>2016-2017, LEI JUN Scholarship (Scale: Top1 Winner of National Scholarship, the highest prize for
+                        students in WHU)</li>
+                    <li>2014-2017, First Class Scholarship (Scale: 5%), Three Times, WHU</li>
                     <li>2014-2017, Excellent Student (Scale: 5%), Three Times, WHU</li>
                     <li>2015-2016, Excellent Volunteer, WHU</li>
                     <li>2015-2016, Excellent Community Activists, WHU</li>
-                    <li><b>2014-2015, National Scholarship (Scale: 1%), China</b></li>
+                    <li>2014-2015, National Scholarship (Scale: 1%), China</li>
                 </ul>
             </div>
         </div>
@@ -52,8 +52,8 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
-                    <li>Teaching Assistant (TA), <a href="http://www.javatree.cn/" target="_blank">Object-Oriented Programming (JAVA) </a>, Fall 2017</li>
-                    <li>Teaching Assistant (TA), Computer Systems: A programmer’s Perspective, Fall 2017</li>
+                    <li>Teaching Assistant (TA), <a href="http://www.javatree.cn/" target="_blank">Object-Oriented Programming (JAVA) </a>, Autumn 2017, Wuhan University</li>
+                    <li>Teaching Assistant (TA), Computer Systems: A programmer's Perspective, Autumn 2017, Wuhan University</li>
                 </ul>
             </div>
         </div>
