--- a/index.html
+++ b/index.html
@@ -55,20 +55,18 @@ var _hmt = _hmt || [];
                         <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
                         <p><i class="home icon"></i>Group: <a
                                 href="http://web.cse.ohio-state.edu/~sun.397/students.html" target="_blank">DM+AI Group@OSU</a></p>
-                        <!--<p>Senior Undergraduate, Wuhan University, China</p>-->
-                        <!--<p><i class="mail icon"></i>Email: tommy96 AT whu DOT edu DOT cn </p>-->
-                        <!--<p><i class="home icon"></i>Lab: <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data Mining Lab (BBDM-Lab) </a></p>-->
-                        <!--<p>-->
-                            <!--<i class="google icon"></i><a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">Google Scholar</a>-->
-                            <!--<i class="linkedin icon"></i><a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">Linkedin</a>-->
+
                             <!--<i class="linkify icon"></i><a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">Researchgate</a>-->
                             <!--<i class="github icon"></i><a href="https://github.com/Tommy9607" target="_blank">Github</a>-->
 
                         <!--</p>-->
                     </div>
                     <div class="description">
+                        <i class="google icon"></i><a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">Google Scholar</a>
+                        <i class="linkedin icon"></i><a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">Linkedin</a>
+                        <i class="book icon"></i><a href="./Xiang%20Yue-CV.pdf" target="_blank">Curriculum Vitae</a>
                         <br>
-                        <p>My Curriculum Vitae is avalible <a href="./Xiang%20Yue-CV.pdf" target="_blank">here</a></p>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -100,13 +98,12 @@ var _hmt = _hmt || [];
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
-                    <li>Sept.1 - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
-                    <li>August.11 - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
-                    <li>June.28 - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
-                    <li>Jun.13 - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
-                    <li>May.31 - 1 papar of <i><b>Methods</b></i> has been accepted</li>
-                    <li>May.30 - Win Outstanding Graduates of WHU (top 10%)</li>
-                    <li>May.25 - 1 papar of <i><b>BMC Bioinformatics</b></i> is accepted</li>
+                    <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
+                    <li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
+                    <li>[June 2018] - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
+                    <li>[June 2018] - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
+                    <li>[May 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by<i><b> Methods</b></i> and <i><b>BMC Bioinformatics.</b></i></li>
+                    <li>[May 2018] - Win Outstanding Graduates of WHU (top 10%)</li>
                     <!--<li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and-->
                         <!--give reports in Kansas City, MO, USA-->
                     <!--</li>-->
@@ -118,6 +115,9 @@ var _hmt = _hmt || [];
                 </ul>
 
             </div>
+
+            <div class="ui section divider"></div>
+            <p>Last Updated: 9/2018
         </div>
     </div>
 </div>
