--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var _hmt = _hmt || [];
                         <p>PhD student, The Ohio State University, OH, U.S.</p>
                         <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
                         <p><i class="home icon"></i>Group: <a
-                                href="http://web.cse.ohio-state.edu/~sun.397/students.html" target="_blank">DM+AI Group@OSU</a></p>
+                                href="https://u.osu.edu/ihudas/" target="_blank">Honored to be part of the wonderful team!</a></p>
 
                             <!--<i class="linkify icon"></i><a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">Researchgate</a>-->
                             <!--<i class="github icon"></i><a href="https://github.com/Tommy9607" target="_blank">Github</a>-->
