--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ var _hmt = _hmt || [];
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+		    <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by<a href="http://glab.hzau.edu.cn/APBC2019/" target="_blank"><i><b> APBC 2019</b></i></a> and <a href="http://orienta.ugr.es/bibm2018/" target="_blank"><i><b>BIBM 2018</b></i></a></li>
                     <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
                     <li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
                     <li>[June 2018] - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
@@ -117,7 +118,7 @@ var _hmt = _hmt || [];
             </div>
 
             <div class="ui section divider"></div>
-            <p>Last Updated: 9/2018
+            <p>Last Updated: 10/2018
         </div>
     </div>
 </div>
