--- a/publication.html
+++ b/publication.html
@@ -36,6 +36,10 @@
 				<div class="content">
 					<h3 class="title">Conference Paper</h3>
 					<ul>
+						<li>Prediction of Drug-Disease Associations and Their Effects by Signed Network-Based Nonnegative Matrix Factorization  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018) </b></i>, Dec. 2017, Wen Zhang, Feng Huang, <b>Xiang Yue</b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu (to appear)
+						
+						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b> (to appear)
+						
 						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, Accepted, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
 							<a href="./slide/B293_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
 						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper, Accepted)
