--- a/publication.html
+++ b/publication.html
@@ -36,7 +36,7 @@
 				<div class="content">
 					<h3 class="title">Conference Paper</h3>
 					<ul>
-						<li>Prediction of Drug-Disease Associations and Their Effects by Signed Network-Based Nonnegative Matrix Factorization  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018) </b></i>, Dec. 2017, Wen Zhang, Feng Huang, <b>Xiang Yue</b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu (to appear)
+						<li>Prediction of drug-disease associations and their effects by signed network-based nonnegative matrix factorization, <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018) </b></i>, Dec. 2017, Wen Zhang, Feng Huang, <b>Xiang Yue</b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu (to appear)
 						
 						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b> (to appear)
 						
