--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ var _hmt = _hmt || [];
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
-		    <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
+                    <li>[Nov 2018] - Our paper on "LncRNA-Protein interaction prediction" has been accepted by <i><b>PLOS Computational Biology</b></i>!
+                    <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
                     <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
                     <li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
                     <li>[June 2018] - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
